Z-index e absolute fix

--- a/src/App.css
+++ b/src/App.css
@@ -104,5 +104,6 @@
 
 .zTry {
   margin: 10px;
+  position: absolute;
   z-index: 1;
 }
